--- a/capstone1.html
+++ b/capstone1.html
@@ -6,8 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
 	<title> VantagePoint Trading and Consultancy Inc. </title>
-	<link rel="icon" href="assets/images/icon.png">
 
+	<!-- fav icon -->
+	<link rel="icon" href="assets/images/icon.png">
 
 	<!-- google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Lora|Montserrat&display=swap" rel="stylesheet">
@@ -25,12 +26,12 @@
 </head>
 
 <body>
-	<div class="container-fluid px-0">
+	<div class="container-fluid">
 
 		<!-- start nav -->
-		<nav class="navbar navbar-expand-md navbar-light">
-			<a href="" class="navbar-brand">	
-				<img id="company-logo" src="assets/images/logo.png" class="img-fluid">
+		<nav class="navbar navbar-expand-md fixed-top">
+			<a href="#" class="navbar-brand">	
+				<!-- <img id="company-logo" src="assets/images/logo.png" class="img-fluid"> -->
 			</a>
 
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-nav">
@@ -40,19 +41,19 @@
 			<div id="navbar-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a href="home" class="nav-link active">Home</a>
+						<a href="#home" class="nav-link active">Home</a>
 					</li>
 					<li class="nav-item">
-						<a href="about" class="nav-link">About</a>
+						<a href="#about" class="nav-link">About</a>
 					</li>
 					<li class="nav-item">
-						<a href="services" class="nav-link">Services</a>
+						<a href="#services" class="nav-link">Services</a>
 					</li>
 					<li class="nav-item">
-						<a href="products" class="nav-link">Products</a>
+						<a href="#products" class="nav-link">Products</a>
 					</li>
 					<li class="nav-item">
-						<a href="contact" class="nav-link">Contact</a>
+						<a href="#contact" class="nav-link">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -60,105 +61,88 @@
 		<!-- end nav -->
 
 		<!-- start home -->
-		<section id="home">
-			<div id="image-slide" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#image-slide" data-slide-to="0" class="active"></li>
-					<li data-target="#image-slide" data-slide-to="1"></li>
-					<li data-target="#image-slide" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item active" data-interval="2">
-						<img src="assets/images/img-slide1.jpeg" class="d-block w-100">
-						<div class="carousel-caption d-none d-md-block">
-							<div class="row">
-								<div class="col-md-6">
-									<h1 class="animated bounceInLeft"> VANTAGEPOINT </h1>
+		<div class="row">
+			<div class="col-md-12 px-0">
+				<section id="home">
+					<div id="image-slide" class="carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#image-slide" data-slide-to="0" class="active"></li>
+							<li data-target="#image-slide" data-slide-to="1"></li>
+							<li data-target="#image-slide" data-slide-to="2"></li>
+						</ol>
+						<div class="carousel-inner">
+							<div class="carousel-item active" data-interval="5000">
+								<img src="assets/images/img-slide1.jpeg" class="d-block w-100">
+								<div class="carousel-caption d-none d-md-block carousel-vp">
+									<h1 class="animated bounceInLeft my-0"> VANTAGEPOINT </h1>
 									<p class="animated fadeInLeft"> Change your Lighting Perspective </p>
-									<a class="btn animated fadeIn" href="#contact"> TURN ONTO US </a>
+									<a class="btn animated fadeIn my-3" href="#contact"> TURN ONTO US </a>
+								</div>
+							</div>
+							<div class="carousel-item" data-interval="5000">
+								<img src="assets/images/img-slide2.jpeg" class="d-block w-100">
+								<div class="carousel-caption d-none d-md-block carousel-pe">
+									<h1 class="animated bounceInLeft"> PROFESSIONAL EXPERIENCE </h1>
+									<p class="animated fadeInLeft"> Lorem ipsum dolor sit amet, consectetur adipisicing elit </p>
+									<a class="btn animated fadeIn my-3" href="#products"> SEE OUR WORK </a>
+								</div>
+							</div>
+							<div class="carousel-item" data-interval="5000">
+								<img src="assets/images/img-slide3.jpeg" class="d-block w-100">
+								<div class="carousel-caption d-none d-md-block carousel-tc">
+									<h1 class="animated bounceInLeft"> TRADING AND CONSULTANCY </h1>
+									<p class="animated fadeInLeft"> Lorem ipsum dolor sit amet, consectetur adipisicing elit </p>
+									<a class="btn animated fadeIn my-3" href="#services"> GET TO KNOW US </a>
 								</div>
 							</div>
 						</div>
+						<a class="carousel-control-prev" href="#image-slide" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="carousel-control-next" href="#image-slide" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
 					</div>
-					<div class="carousel-item" data-interval="2">
-						<img src="assets/images/img-slide2.jpeg" class="d-block w-100">
-						<div class="carousel-caption d-none d-md-block">
-							<h1 class="animated bounceInLeft"> PROFESSIONAL EXPERIENCE </h1>
-							<p class="animated fadeInLeft"> Lorem ipsum dolor sit amet, consectetur adipisicing elit </p>
-							<a class="btn animated fadeIn" href="#products"> SEE OUR WORK </a>
-						</div>
-					</div>
-					<div class="carousel-item" data-interval="2">
-						<img src="assets/images/img-slide3.jpeg" class="d-block w-100">
-						<div class="carousel-caption d-none d-md-block">
-							<h1 class="animated bounceInLeft"> TRADING AND CONSULTANCY </h1>
-							<p class="animated fadeInLeft"> Lorem ipsum dolor sit amet, consectetur adipisicing elit </p>
-							<a class="btn animated fadeIn" href="#services"> GET TO KNOW US </a>
-						</div>
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#image-slide" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#image-slide" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
+				</section>
 			</div>
-		</section>
-
-		<!-- <section id="home">
-			<div class="image-slide">
-				<div class="img-slide1" style="background-image: url(assets/images/img-slide1.jpeg);">
-					<h1 class="animated bounceInLeft"> VANTAGEPOINT </h1>
-					<p class="animated fadeInLeft"> Change your Lighting Perspective </p>
-					<a class="btn animated fadeIn" href="contact"> TURN ONTO US </a>
-				</div>
-				<div class="img-slide2" style="background-image: url(assets/images/img-slide2.jpeg);">
-					<h1 class="animated bounceInLeft"> PROFESSIONAL EXPERIENCE </h1>
-					<p class="animated fadeInLeft"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-					<a class="btn animated fadeIn" href="products"> SEE OUR WORK </a>
-				</div>
-				<div class="img-slide3" style="background-image: url(assets/images/img-slide3.jpeg);">
-					<h1 class="animated bounceInLeft"> TRADING AND CONSULTANCY </h1>
-					<p class="animated fadeInLeft"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-					<a class="btn animated fadeIn" href="services"> GET TO KNOW US </a>
-				</div>
-			</div>
-		</section> -->
+		</div>
 		<!-- end home -->
+
+		<!-- start image connect -->
+		<div class="row">
+			<div class="col-md-12 img-connect">
+				<h1 id="light"> “Darkness cannot drive out darkness: only LIGHT can do that" </h1>
+				<!-- <h1> JOHN 1:5 </h1> -->
+				<h1 id="dark"> “Darkness cannot drive out darkness: only LIGHT can do that" </h1>
+			</div>
+		</div>
+		<!-- end image connect -->
 
 		<!-- start about -->
 		<section id="about">
-			<div class="mission">
-				<h1 class="animated slideInUp"> MISSION </h1>
-				<p class="animated slideInUp"> "Our mission is to provide quality services to our customers in global logistics safely and efficiently by utilizing quality personnel and reliable resources. Offer cost effective, environmentally friendly and problem solving consultations and solutions that assist our clients in achieving their objectives and continually meet and exceed their expectations and provide unquestionable value." </p>
+			<hr>
+			<h1 class="text-center"> ABOUT US </h1>
+			<div id="mission" class="p-5">
+				<h1 class="about-tags"> MISSION </h1>
+				<p class="text-justify p-5"> "Our mission is to provide quality services to our customers in global logistics safely and efficiently by utilizing quality personnel and reliable resources. Offer cost effective, environmentally friendly and problem solving consultations and solutions that assist our clients in achieving their objectives and continually meet and exceed their expectations and provide unquestionable value." </p>
 			</div>
-			<div class="vision">
-				<h1 class="animated slideInUp"> VISION </h1>
-				<p class="animated slideInUp"> "We strive to be the most preferred and reliable trading and consultancy company, providing the most creative, innovative and timely services on a consistent basis in terms of brokerage and consignment, in an effort to drive meaningful value to our agents." </p>
+			<div id="vision" class="p-5">
+				<h1 class="about-tags"> VISION </h1>
+				<p class="text-justify p-5"> "We strive to be the most preferred and reliable trading and consultancy company, providing the most creative, innovative and timely services on a consistent basis in terms of brokerage and consignment, in an effort to drive meaningful value to our agents." </p>
 			</div>
 		</section>
 		<!-- end about -->
 
 		<!-- start services -->
 		<section id="services">
-			<h1> CAPABILITIES AND SERVICES </h1>
-			<figure class="services-circles">
-				<img src="assets/images/icon1.png" id="brokerage">
-				<img src="assets/images/icon2.png"	id="trading">
-				<img src="assets/images/icon3.png" id="trucking">
+			<hr>
+			<h1 class="text-center"> CAPABILITIES AND SERVICES </h1>
+			<figure class="services-circles text-center my-4">
+				<img src="assets/images/icon1.png" class="circle brokerage">
+				<img src="assets/images/icon2.png" class="circle trading">
+				<img src="assets/images/icon3.png" class="circle trucking">
 			</figure>
 			<div class="capabilitie-services broker">
 				<h2> Licensed Custom Broker </h2>
