--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lora|Montserrat&display=swap" rel="stylesheet">
 
 	<!-- fontawesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 	<!-- animate css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
@@ -76,7 +77,7 @@
 								<div class="carousel-caption d-none d-md-block carousel-vp">
 									<h1 class="animated bounceInLeft my-0"> VANTAGEPOINT </h1>
 									<p class="animated fadeInLeft"> Change your Lighting Perspective </p>
-									<a class="btn animated fadeIn my-3" href="contact.html"> START A PROJECT </a>
+									<a class="btn animated fadeIn my-2" href="contact.html"> START A PROJECT </a>
 								</div>
 							</div>
 							<div class="carousel-item" data-interval="5000">
@@ -123,136 +124,158 @@
 		<section id="about">
 			<h1 class="text-center pt-4"> ABOUT US </h1>
 			<hr>
-			<div id="mission" class="p-5">
-				<h1 class="about-tags"> MISSION </h1>
-				<p class="text-justify p-5"> "Our mission is to provide quality services to our customers in global logistics safely and efficiently by utilizing quality personnel and reliable resources. Offer cost effective, environmentally friendly and problem solving consultations and solutions that assist our clients in achieving their objectives and continually meet and exceed their expectations and provide unquestionable value." </p>
+			<div class="row">
+				<div class="col-md-6 text-center">
+					<div id="mission" class="p-5">
+						<h2 class="about-tags p-3"> MISSION </h2>
+						<p class="text-justify p-5 p-about"> "Our mission is to provide quality services to our customers in global logistics safely and efficiently by utilizing quality personnel and reliable resources. Offer cost effective, environmentally friendly and problem solving consultations and solutions that assist our clients in achieving their objectives and continually meet and exceed their expectations and provide unquestionable value." </p>
+					</div>
+				</div>
+				<div class="col-md-6 text-center">
+					<div id="vision" class="p-5">
+						<h2 class="about-tags p-3"> VISION </h2>
+						<p class="text-justify p-5 p-about"> "We strive to be the most preferred and reliable trading and consultancy company, providing the most creative, innovative and timely services on a consistent basis in terms of brokerage and consignment, in an effort to drive meaningful value to our agents." </p>
+					</div>
+				</div>
 			</div>
-			<div id="vision" class="p-5">
-				<h1 class="about-tags"> VISION </h1>
-				<p class="text-justify p-5"> "We strive to be the most preferred and reliable trading and consultancy company, providing the most creative, innovative and timely services on a consistent basis in terms of brokerage and consignment, in an effort to drive meaningful value to our agents." </p>
-			</div>
+
 		</section>
 		<!-- end about -->
 
 		<!-- start services -->
 		<section id="services">
-			<h1 class="text-center"> CAPABILITIES AND SERVICES </h1>
+			<h1 class="text-center pt-4"> CAPABILITIES AND SERVICES </h1>
 			<hr>
-			<figure class="services-circles text-center my-4">
+			<figure class="services-circles text-center">
 				<img src="assets/images/icon1.png" class="circle brokerage">
 				<img src="assets/images/icon2.png" class="circle trading">
 				<img src="assets/images/icon3.png" class="circle trucking">
 			</figure>
-			<div class="capabilitie-services broker">
-				<h2> Licensed Custom Broker </h2>
-				<p> We can be your Middleman! 
-				We facilitate the shipment and delivery of goods across geographical borders for individuals and organizations. </p>
+
+			<div class="row">
+				<div class="col-md-4 text-center">
+					<div class="capabilitie-services consignment p-5">
+						<h2 class="p-3"> Consignment </h2>
+						<p class="p-5 text-justify p-services"> We can receive shipments on your behalf! 
+						We'll be responsible and take care of it. </p>
+					</div>		
+				</div>
+				<div class="col-md-4 text-center">
+					<div class="capabilitie-services broker p-5">
+						<h2 class="p-3"> Licensed Custom Broker </h2>
+						<p class="p-5 text-justify p-services"> We can be your Middleman! 
+						We facilitate the shipment and delivery of goods across geographical borders for individuals / organizations. </p>
+					</div>
+				</div>
+				<div class="col-md-4 text-center p-5">
+					<div class="capabilitie-services trucking">
+						<h2 class="p-3"> Trucking </h2>
+						<p class="p-5 text-justify p-services"> We move!
+						We transport large quantities of raw materials, construction materials, industrial materials and equipment, etc., typically by land. </p>
+					</div>
+				</div>
 			</div>
-			<div class="capabilitie-services consignment">
-				<h2> Consignment </h2>
-				<p> We can receive shipments on your behalf! 
-				We'll be responsible and take care of it. </p>
+
+			<div class="row">
+				<div class="col-md-6 text-center">
+					<div class="capabilitie-services consultation px-5">
+						<h2 class="p-3"> Consultation </h2>
+						<p class="p-5 text-justify p-services"> We can talk to you!
+						We can support you and work together or give professional and expert advice depending on your field of interests. (Legal Consultations, Governance, Risk and Compliance, etc. </p>
+					</div>	
+				</div>
+				<div class="col-md-6 text-center">
+					<div class="capabilitie-services trading px-5">
+						<h2 class="p-3"> Trading </h2>
+						<p class="p-5 text-justify p-services"> We Trade!
+						We supply Industrial Materials and Equipment depending on your requirements. (Construction Materials, Electrical Pole, LED Lights, etc.) </p>
+					</div>
+				</div>
 			</div>
-			<div class="capabilitie-services trucking">
-				<h2> Trucking </h2>
-				<p> We move!
-				We transport large quantities of raw materials, construction materials, industrial materials and equipment, etc., typically by land. </p>
-			</div>
-			<div class="capabilitie-services consultation">
-				<h2> Consultation </h2>
-				<p> We can talk to you!
-				We can support you and work together or give professional and expert advice depending on your field of interests. (Legal Consultations, Governance, Risk and Compliance, etc. </p>
-			</div>
-			<div class="capabilitie-services trading">
-				<h2> Trading </h2>
-				<p> We Trade!
-				We supply Industrial Materials and Equipment depending on your requirements. (Construction Materials, Electrical Pole, LED Lights, etc.) </p>
-			</div>
+
 		</section>
 		<!-- end services -->
 
 		<!-- start products -->
 		<section id="products">
-			<h1> PRODUCTS </h1>
+			<h1 class="text-center pt-4"> PRODUCTS </h1>
 			<hr>
-			<div>
-				<h2> INDUSTRIAL | RESIDENTIAL </h2>
-				<figure class="industrial-residential-images">
-					<img src="">
-					<img src="">
-					<img src="">
-					<img src="">
-				</figure>
+			<h2 class="text-center p-5"> INDUSTRIAL | RESIDENTIAL </h2>
+
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-6">
+						<img class="img-fluid" src="assets/images/industrial1.jpeg">
+					</div>
+					<div class="col-md-6">
+						<img class="img-fluid" src="assets/images/industrial2.jpeg">
+					</div>
+				</div>
 			</div>
-			<div>
-				<h2> LED LIGHTS </h2>
-				<h3> Eco-Friendly </h3>
-				<p> LED product is healthy, free of stroboflash, ultraviolent rays, infrared radiation and mercury element. It will not produce harmful substances during the use, so it is recognized as a new green lighting in the twenty first century. </p>
-				<h3> Energy-Efficient </h3>
-				<p> LED product has the advantages of high brightness, low power consumption, low hear, etc. 50-80% of energy can be saved compared to the traditional light sources under the same illumination intensity. </p>
+
+			<hr class="mt-5">
+			<h2 class="text-center p-5"> LED LIGHTS </h2>
+			<div class="row text-center">
+				<div class="col-lg-6 text-center">
+					<h3 class="p-3"> Eco-Friendly </h3>
+					<p class="p-5 text-justify p-products"> LED product is healthy, free of stroboflash, ultraviolent rays, infrared radiation and mercury element. It will not produce harmful substances during the use, so it is recognized as a new green lighting in the twenty first century. </p>
+				</div>
+				<div class="col-lg-6">
+					<h3 class="p-3"> Energy-Efficient </h3>
+					<p class="p-5 text-justify p-products"> LED product has the advantages of high brightness, low power consumption, low hear, etc. 50-80% of energy can be saved compared to the traditional light sources under the same illumination intensity. </p>
+				</div>
 			</div>
-			<div>
-				<h2> STREETLIGHTS </h2>
-				<figure class="streetlights-images">
-					<img src="">
-					<img src="">
-					<img src="">
-					<img src="">
-				</figure>
+
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-lg-3 text-center">
+						<h2 class="pt-5"> STREETLIGHTS </h2>
+						<img class="img-fluid product-image" src="assets/images/streetlight.jpg">
+					</div>
+					<div class="col-lg-3 text-center">
+						<h2 class="pt-5"> DOWNLIGHTS </h2>
+						<img class="img-fluid product-image" src="assets/images/downlight.png">
+					</div>
+					<div class="col-lg-3 text-center">
+						<h2 class="pt-5"> FLOODLIGHTS </h2>
+						<img class="img-fluid product-image" src="assets/images/floodlight.jpg">
+					</div>
+					<div class="col-lg-3 text-center">
+						<h2 class="pt-5"> TUBELIGHTS </h2>
+						<img class="img-fluid product-image" src="assets/images/tubelight.jpg">
+					</div>
+				</div>
 			</div>
-			<div>
-				<h2> DOWNLIGHTS </h2>
-				<figure class="downlights-images">
-					<img src="">
-					<img src="">
-					<img src="">
-					<img src="">
-				</figure>
-			</div>
-			<div>
-				<h2> FLOODLIGHTS </h2>
-				<figure class="floodlights-images">
-					<img src="">
-					<img src="">
-					<img src="">
-					<img src="">
-				</figure>
-			</div>
-			<div>
-				<h2> TUBELIGHTS </h2>
-				<figure class="tubelights-images">
-					<img src="">
-					<img src="">
-					<img src="">
-					<img src="">
-				</figure>
-			</div>
+
 		</section>
 		<!-- end products -->
 
 		<!-- start contact -->
 		<section id="contact">
-			<h1 class="text-center"> QUICK CONTACT </h1>
+			<h1 class="text-center pt-5"> QUICK CONTACT </h1>
 			<hr>
-			<div class="row p-5">
+			<div class="row pb-3">
 				<div class="col-md-12">
 					<div class="row">
-						<div id="qcontact-gmail" class="col-md-2 offset-md-3 text-center qcontact">
-							<a href="contact.html">
-								<p>For business inquiries</p>
-								<p>vantagepointconsultancy@gmail.com</p>
+						<div id="qcontact-phone" class="col-md-4 text-right qcontact">
+							<a href="#" class="link">
+								<i class="fas fa-mobile-alt"></i>
+								<h4 class="mb-0 call">Call us on</h4>
+								<p class="p-link">+63 956 872 0280</p>
 							</a>
 						</div>
-						<div id="qcontact-phone" class="col-md-2 text-center qcontact">
-							<a href="#">
-								<p>Call us on</p>
-								<p>+63 956 872 0280</p>
+						<div id="qcontact-gmail" class="col-md-4 text-center qcontact">
+							<a href="contact.html" class="link">
+								<i class="far fa-paper-plane"></i>
+								<h4 class="mb-0 mail">For business inquiries</h4>
+								<p class="p-link">vantagepointconsultancy@gmail.com</p>
 							</a>
 						</div>
-						<div id="qcontact-fb" class="col-md-2 text-center qcontact">
-							<a href="https://www.facebook.com/VPTCI/">
-								<p>Let's chat</p>
-								<p>@VPTCI</p>
+						<div id="qcontact-fb" class="col-md-4 text-left qcontact">
+							<a href="https://www.facebook.com/VPTCI/" target="_blank" class="link">
+								<i class="fab fa-facebook-f"></i>
+								<h4 class="mb-0 chat">Let's chat</h4>
+								<p class="p-link">@VPTCI</p>
 							</a>
 						</div>
 					</div>
@@ -265,9 +288,8 @@
 		<footer>
 			<div class="row">
 				<div class="col-md-4 offset-md-4 footer">
-					<img src="assets/images/logo.png" id="footer-logo" class="image-fluid">
-					<hr class="mt-5">
-					<p class="text-center">
+					<img src="assets/images/logo.png" id="footer-logo" class="image-fluid pt-3">
+					<p class="text-center mt-4">
 						All rights reserved &copy; 2020
 					</p>	
 				</div>
