capstone1 update last update zuitt

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-	<title> Contact </title>
+	<title> VantagePoint Contact </title>
 
 	<!-- fav icon -->
 	<link rel="icon" href="assets/images/icon.png">
@@ -35,7 +35,7 @@
 		</header>
 
 		<!-- start nav -->
-		<nav class="navbar navbar-expand-md sticky-top">
+		<nav class="navbar navbar-expand-md sticky-top animated fadeInDown">
 			<a href="#" class="navbar-brand">	
 				<img id="company-logo" class="d-md-block d-none" src="assets/images/logo.png">
 			</a>
@@ -43,8 +43,8 @@
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-nav">
 				<span class="navbar-toggler-icon"></span>
 				<span class="d-block d-md-none nav-icon-pixel">
-						<img id="icon-pixel" src="assets/images/icon.png">
-					</span>
+					<img id="icon-pixel" src="assets/images/icon.png">
+				</span>
 			</button>
 
 			<div id="navbar-nav" class="collapse navbar-collapse">
@@ -128,39 +128,39 @@
 	<!-- end container -->
 
 	<!-- start contact -->
-		<div class="container-fluid">
-			<section id="contact">
-				<h1 class="text-center pt-5"> QUICK CONTACT </h1>
-				<hr>
-				<div class="row pb-3">
-					<div class="col-12">
-						<div class="row">
-							<div id="qcontact-phone" class="col-4 text-right qcontact">
-								<a href="#" class="link">
-									<i class="fas fa-mobile-alt"></i>
-									<h4 class="d-none d-lg-block mb-0 call">Call us on</h4>
-									<p class="d-none d-lg-block p-link">+63 956 872 0280</p>
-								</a>
-							</div>
-							<div id="qcontact-gmail" class="col-4 text-center qcontact">
-								<a href="contact.html" class="link">
-									<i class="far fa-paper-plane"></i>
-									<h4 class="d-none d-lg-block mb-0 mail">For business inquiries</h4>
-									<p class="d-none d-lg-block p-link d-none">vantagepointconsultancy@gmail.com</p>
-								</a>
-							</div>
-							<div id="qcontact-fb" class="col-4 text-left qcontact">
-								<a href="https://www.facebook.com/VPTCI/" target="_blank" class="link">
-									<i class="fab fa-facebook-f"></i>
-									<h4 class="d-none d-lg-block mb-0 chat">Let's chat</h4>
-									<p class="d-none d-lg-block p-link">@VPTCI</p>
-								</a>
-							</div>
+	<div class="container-fluid">
+		<section id="contact">
+			<h1 class="text-center pt-5"> QUICK CONTACT </h1>
+			<hr>
+			<div class="row pb-3">
+				<div class="col-12">
+					<div class="row">
+						<div id="qcontact-phone" class="col-4 text-right qcontact">
+							<a href="#" class="link">
+								<i class="fas fa-mobile-alt"></i>
+								<h4 class="d-none d-lg-block mb-0 call">Call us on</h4>
+								<p class="d-none d-lg-block p-link">+63 956 872 0280</p>
+							</a>
+						</div>
+						<div id="qcontact-gmail" class="col-4 text-center qcontact">
+							<a href="contact.html" class="link">
+								<i class="far fa-paper-plane"></i>
+								<h4 class="d-none d-lg-block mb-0 mail">For business inquiries</h4>
+								<p class="d-none d-lg-block p-link d-none">vantagepointconsultancy@gmail.com</p>
+							</a>
+						</div>
+						<div id="qcontact-fb" class="col-4 text-left qcontact">
+							<a href="https://www.facebook.com/VPTCI/" target="_blank" class="link">
+								<i class="fab fa-facebook-f"></i>
+								<h4 class="d-none d-lg-block mb-0 chat">Let's chat</h4>
+								<p class="d-none d-lg-block p-link">@VPTCI</p>
+							</a>
 						</div>
 					</div>
 				</div>
-			</section>
-			<!-- end contact -->
+			</div>
+		</section>
+		<!-- end contact -->
 
 		<!-- start footer -->
 		<footer>
@@ -168,7 +168,7 @@
 				<div class="col-md-4 offset-md-4 footer">
 					<img src="assets/images/logo.png" id="footer-logo" class="image-fluid pt-3">
 					<p class="text-center mt-4">
-						All rights reserved &copy; 2020
+						All rights reserved | Micko Angelo Lacap | &copy; 2020
 					</p>	
 				</div>
 			</div>
