--- a/home.html
+++ b/home.html
@@ -27,11 +27,12 @@
 </head>
 
 <body>
+
 	<div class="container-fluid">
 
 		<!-- start nav -->
 		<div class="container-fluid">
-			<nav class="navbar navbar-expand-md fixed-top">
+			<nav class="navbar navbar-expand-md fixed-top animated fadeInDown">
 				<a href="#home" class="navbar-brand">	
 					<img id="company-logo" class="d-md-block d-none" src="assets/images/logo.png">
 				</a>
@@ -300,8 +301,8 @@
 				<div class="row">
 					<div class="col-md-4 offset-md-4 footer">
 						<img src="assets/images/logo.png" id="footer-logo" class="image-fluid pt-3">
-						<p class="text-center mt-4">
-							All rights reserved &copy; 2020
+						<p class="text-center mt-4 img-fluid">
+							All rights reserved | Micko Angelo Lacap | &copy; 2020
 						</p>	
 					</div>
 				</div>
@@ -309,17 +310,6 @@
 			<!-- end footer -->
 		</div>
 		<!-- end container contact / footer -->
-
-
-
-
-
-
-
-
-
-
-
 
 	</div>
 	<!-- end container -->
