--- a/credentials.html
+++ b/credentials.html
@@ -50,16 +50,16 @@
 			<div id="navbar-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a href="home.html" class="nav-link active">Home</a>
+						<a href="index.html" class="nav-link active">Home</a>
 					</li>
 					<li class="nav-item">
-						<a href="home.html#about" class="nav-link">About</a>
+						<a href="index.html#about" class="nav-link">About</a>
 					</li>
 					<li class="nav-item">
-						<a href="home.html#services" class="nav-link">Services</a>
+						<a href="index.html#services" class="nav-link">Services</a>
 					</li>
 					<li class="nav-item">
-						<a href="home.html#products" class="nav-link">Products</a>
+						<a href="index.html#products" class="nav-link">Products</a>
 					</li>
 					<li class="nav-item">
 						<a href="#contact" class="nav-link">Contact</a>
